--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
   <div class="container-fluid">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link active" href="file:///D:/Pulpleaf/Pulpleaf%20Enterprise%20.html">Home</a>
+        <a class="nav-link active" href="Pulpleaf Enterprise .html">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="file:///D:/Pulpleaf/Pulpleaf%20Products.html">Products</a>
+        <a class="nav-link" href="Pulpleaf Products.html">Products</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="file:///D:/Pulpleaf/Pulpleaf%20Services.html">Services</a>
+        <a class="nav-link" href="Pulpleaf Services.html">Services</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="file:///D:/Pulpleaf/Pulpleaf%20Team.html">Team</a>
+        <a class="nav-link" href="Pulpleaf Team.html">Team</a>
       </li>
     </ul>
   </div>
