--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <a class="nav-link active" href="Pulpleaf Enterprise .html">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="Pulpleaf Products.html">Products</a>
+        <a class="nav-link" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">Products</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="Pulpleaf Services.html">Services</a>
@@ -53,7 +53,7 @@
 	   </a>
 	   <br>
       <p><b>814 BLISS, 50 National Road, Putatan, Muntinlupa, 1772 Metro Manila</b></p>
-	    <h6>Contact Us: 0917 719 2241 or 272153132</h6>
+	    <h6>Contact Us: 0917 719 2241</h6> 
 		<h6>Gmail: pulpleaf.enterprise@gmail.com</h6>
       <h2 class="mt-4">Core Values</h2>
       <h5>We value being:</h5>
