--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
   <div class="container-fluid">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link active" href="Pulpleaf Enterprise .html">Home</a>
+        <a class="nav-link active" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">Products</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="Pulpleaf Services.html">Services</a>
+        <a class="nav-link" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">Services</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="Pulpleaf Team.html">Team</a>
+        <a class="nav-link" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">Team</a>
       </li>
     </ul>
   </div>
