--- a/Pulpleaf Products.html
+++ b/Pulpleaf Products.html
@@ -97,16 +97,16 @@ body {
   <div class="container-fluid">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="file:///D:/Pulpleaf/Pulpleaf%20Enterprise%20.html">Home</a>
+        <a class="nav-link" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="file:///D:/Pulpleaf/Pulpleaf%20Products.html">Products</a>
+        <a class="nav-link active" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">Products</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="file:///D:/Pulpleaf/Pulpleaf%20Services.html">Services</a>
+        <a class="nav-link" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">Services</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="file:///D:/Pulpleaf/Pulpleaf%20Team.html">Team</a>
+        <a class="nav-link" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">Team</a>
       </li>
     </ul>
   </div>
@@ -120,7 +120,7 @@ body {
 
     <div class="single-card">
       <div class="img-area">
-	     <a href="file:///D:/Pulpleaf/Binders%20+%20Organizers.html">
+	     <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">
         <img src="Arch-Binder-long.png" alt="">
 		</a>
       </div>
@@ -132,7 +132,7 @@ body {
   
     <div class="single-card">
       <div class="img-area">
-	    <a href="file:///D:/Pulpleaf/Clips,%20Staple,&%20Puncher.html">
+	    <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">
         <img src="staplet-max-with-remover.png" alt="">
 		</a>
       </div>
@@ -143,7 +143,7 @@ body {
   
     <div class="single-card">
       <div class="img-area">
-	        <a href="file:///D:/Pulpleaf/Cleaning%20Materials.html">
+	        <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">
         <img src="Others_Liquid Hand Soap 1G.png" alt="">
 		</a>
       </div>
@@ -153,7 +153,7 @@ body {
     </div>
 	<div class="single-card">
       <div class="img-area">
-	   <a href="file:///D:/Pulpleaf/Scissors%20&%20Cutters.html">
+	   <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">
       <img src="scissors-Stainless-6.png" alt="">
 		</a>
       </div>
@@ -165,7 +165,7 @@ body {
   
     <div class="single-card">
       <div class="img-area">
-	  	  <a href="file:///D:/Pulpleaf/Labels%20&%20Sticky%20Notes.html">
+	  	  <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">
         <img src="sticky-notes-post-it-3m-3X4.png" alt="">
 		</a>
       </div>
@@ -176,7 +176,7 @@ body {
   
     <div class="single-card">
       <div class="img-area">
-	  	   <a href="file:///D:/Pulpleaf/Stamps%20&%20Ink.html">
+	  	   <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">
         <img src="ink-black.png" alt="">
 		</a>
       </div>
@@ -186,7 +186,7 @@ body {
     </div>
 	<div class="single-card">
       <div class="img-area">
-	  <a href="file:///D:/Pulpleaf/Envelopes%20&%20Folders.html">
+	  <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">
         <img src="Folder_white Long.png" alt="">
 		</a>
       </div>
@@ -198,7 +198,7 @@ body {
   
     <div class="single-card">
       <div class="img-area">
-	  <a href="file:///D:/Pulpleaf/Glue,%20Adhesives%20&%20Tape%20Eraser.html">
+	  <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">
         <img src="Tape-Dispenser Big.png" alt="">
 		</a>
       </div>
@@ -209,7 +209,7 @@ body {
   
     <div class="single-card">
       <div class="img-area">
-	  <a href="file:///D:/Pulpleaf/Markers,%20Pens,%20&%20Highlighters.html">
+	  <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">
         <img src="pilot-ballpen-black.png" alt="">
 		</a>
       </div>
@@ -220,7 +220,7 @@ body {
 	
 	<div class="single-card">
       <div class="img-area">
-	  <a href="file:///D:/Pulpleaf/Laminating%20Films%20&%20Copy%20Paper.html">
+	  <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">
         <img src="Laminating Film_250mic A4 100s.png" alt="">
 		</a>
       </div>
@@ -232,7 +232,7 @@ body {
   
     <div class="single-card">
       <div class="img-area">
-	  <a href="file:///D:/Pulpleaf/Notebooks,%20Sticker%20&%20Pad%20Paper.html">
+	  <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">
         <img src="Notebook_University N.B. Yarn w.png" alt="">
 		</a>
       </div>
@@ -243,7 +243,7 @@ body {
   
     <div class="single-card">
       <div class="img-area">
-	  <a href="file:///D:/Pulpleaf/Other%20Products.html">
+	  <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">
         <img src="Battery_Energizer AA.png" alt="">
 		</a>
       </div>
