--- a/Pulpleaf Products.html
+++ b/Pulpleaf Products.html
@@ -103,7 +103,7 @@ body {
         <a class="nav-link active" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">Products</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">Services</a>
+        <a class="nav-link" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/Pulpleaf%20Services.html">Services</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">Team</a>
