--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <a class="nav-link" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">Products</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">Services</a>
+        <a class="nav-link" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/Pulpleaf%20Services.html">Services</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">Team</a>
