--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <a class="nav-link active" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">Products</a>
+        <a class="nav-link" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/Pulpleaf%20Products.html">Products</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/Pulpleaf%20Services.html">Services</a>
