--- a/Pulpleaf Services.html
+++ b/Pulpleaf Services.html
@@ -112,13 +112,13 @@ body {
         <a class="nav-link" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">Products</a>
+        <a class="nav-link" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/Pulpleaf%20Products.html">Products</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">Services</a>
+        <a class="nav-link active" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/Pulpleaf%20Services.html">Services</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">Team</a>
+        <a class="nav-link" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/Pulpleaf%20Team.html">Team</a>
       </li>
     </ul>
   </div>
