--- a/Pulpleaf Products.html
+++ b/Pulpleaf Products.html
@@ -132,7 +132,7 @@ body {
   
     <div class="single-card">
       <div class="img-area">
-	    <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">
+	    <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/Clips,%20Staple,&%20Puncher.html">
         <img src="staplet-max-with-remover.png" alt="">
 		</a>
       </div>
@@ -143,7 +143,7 @@ body {
   
     <div class="single-card">
       <div class="img-area">
-	        <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">
+	        <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/Cleaning%20Materials.html">
         <img src="Others_Liquid Hand Soap 1G.png" alt="">
 		</a>
       </div>
@@ -153,7 +153,7 @@ body {
     </div>
 	<div class="single-card">
       <div class="img-area">
-	   <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">
+	   <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/Scissors%20&%20Cutters.html">
       <img src="scissors-Stainless-6.png" alt="">
 		</a>
       </div>
@@ -176,7 +176,7 @@ body {
   
     <div class="single-card">
       <div class="img-area">
-	  	   <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">
+	  	   <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/Labels%20&%20Sticky%20Notes">
         <img src="ink-black.png" alt="">
 		</a>
       </div>
@@ -186,7 +186,7 @@ body {
     </div>
 	<div class="single-card">
       <div class="img-area">
-	  <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">
+	  <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/Envelopes%20&%20Folders">
         <img src="Folder_white Long.png" alt="">
 		</a>
       </div>
@@ -198,7 +198,7 @@ body {
   
     <div class="single-card">
       <div class="img-area">
-	  <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">
+	  <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/Glue,%20Adhesives%20&%20Tape%20Eraser.html">
         <img src="Tape-Dispenser Big.png" alt="">
 		</a>
       </div>
@@ -220,7 +220,7 @@ body {
 	
 	<div class="single-card">
       <div class="img-area">
-	  <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">
+	  <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/Markers,%20Pens,%20&%20Highlighters.html">
         <img src="Laminating Film_250mic A4 100s.png" alt="">
 		</a>
       </div>
@@ -232,7 +232,7 @@ body {
   
     <div class="single-card">
       <div class="img-area">
-	  <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">
+	  <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/Notebooks,%20Sticker%20&%20Pad%20Paper.html">
         <img src="Notebook_University N.B. Yarn w.png" alt="">
 		</a>
       </div>
@@ -243,7 +243,7 @@ body {
   
     <div class="single-card">
       <div class="img-area">
-	  <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">
+	  <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/Other%20Products.html">
         <img src="Battery_Energizer AA.png" alt="">
 		</a>
       </div>
