--- a/Cleaning Materials.html
+++ b/Cleaning Materials.html
@@ -98,7 +98,7 @@ body {
   <div class="container-fluid">
     <ul class="navbar-nav">
       <li class="nav-item">
-         <a class="nav-link" href="file:///D:/Pulpleaf/Pulpleaf%20Enterprise%20.html">Home</a>
+        <a class="nav-link" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link active" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/Pulpleaf%20Products.html">Products</a>
@@ -107,7 +107,7 @@ body {
         <a class="nav-link" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/Pulpleaf%20Services.html">Services</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="file:///D:/Pulpleaf/Pulpleaf%20Team.html">Team</a>
+        <a class="nav-link" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/Pulpleaf%20Team.html">Team</a>
       </li>
     </ul>
   </div>
