--- a/Pulpleaf Products.html
+++ b/Pulpleaf Products.html
@@ -165,7 +165,7 @@ body {
   
     <div class="single-card">
       <div class="img-area">
-	  	  <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">
+	  	  <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/Labels%20&%20Sticky%20Notes">
         <img src="sticky-notes-post-it-3m-3X4.png" alt="">
 		</a>
       </div>
@@ -176,7 +176,7 @@ body {
   
     <div class="single-card">
       <div class="img-area">
-	  	   <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/Labels%20&%20Sticky%20Notes">
+	  	   <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/Stamps%20&%20Ink.html">
         <img src="ink-black.png" alt="">
 		</a>
       </div>
@@ -209,7 +209,7 @@ body {
   
     <div class="single-card">
       <div class="img-area">
-	  <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">
+	  <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/Markers,%20Pens,%20&%20Highlighters.html">
         <img src="pilot-ballpen-black.png" alt="">
 		</a>
       </div>
@@ -220,7 +220,7 @@ body {
 	
 	<div class="single-card">
       <div class="img-area">
-	  <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/Markers,%20Pens,%20&%20Highlighters.html">
+	  <a href="https://pulpleaf.github.io/Pulpleaf-Enterprise/Laminating%20Films%20&%20Copy%20Paper.html">
         <img src="Laminating Film_250mic A4 100s.png" alt="">
 		</a>
       </div>
