--- a/Stamps & Ink.html
+++ b/Stamps & Ink.html
@@ -106,10 +106,10 @@ body {
   <div class="container-fluid">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link active" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">Home</a>
+        <a class="nav-link" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/Pulpleaf%20Products.html">Products</a>
+        <a class="nav-link active" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/Pulpleaf%20Products.html">Products</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="https://pulpleaf.github.io/Pulpleaf-Enterprise/Pulpleaf%20Services.html">Services</a>
