Update Envelopes & Folders.html

--- a/Envelopes & Folders.html
+++ b/Envelopes & Folders.html
@@ -201,7 +201,7 @@ body {
         <img src="Envelope_Expandable Assorted Long Brown.png" alt="">
       </div>
       <div class="info">
-        <h4>Envelope_Expandable Long Brown</h4>
+        <h4>Expandable Long Brown</h4>
         <p class="price">22.00Php</p>
       </div>
     </div>
