--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 	  office equipment, school supplies, janitorial supplies, pantry items, 
 	  and other general merchandise.</p>
 	  <h5>Product Range:</h5>
-	  <p>Paper products: Carbonless, Copy paper, Onion skin, Newsprint, Colored bond, etc.</p>
-	   <p>Office and School supplies: Pens, envelopes, folders, ink, organizers, etc.</p> 
+	  <p>Paper products: Carbonless, Copy paper, Newsprint, Colored bond, etc.</p>
+	   <p>Office and School supplies: Pens, Envelopes, Folders, Ink, organizers, etc.</p> 
 	 
       <h2 class="mt-5">Mission</h2>
       <p>We are delighted to make our customers feel comfortable, open, and assured whenever we deliver our
