--- a/Pulpleaf Services.html
+++ b/Pulpleaf Services.html
@@ -171,7 +171,7 @@ body {
 	   <center>
 		   <h3>Our Advertisment</h3>
 		   <a href="https://www.youtube.com/watch?v=S09-w1IJG8I">
-	<img src="pulp-banner-sieze-paper-shopee.png" width:80px; height:80spx;>
+	<img src="pulp-banner-sieze-paper-shopee.png" style="width:1280px; height:720px;">
 </img></a>
 </center>
 </div>
